Vertically centre align emulator touch controls on landscape (fix for issue with cropped dpad when multiple tabs open in landscape on iPhone X Safari)

--- a/appData/js-emulator/css/style.css
+++ b/appData/js-emulator/css/style.css
@@ -277,6 +277,7 @@ body {
   }
 }
 
+/* Small devices in landscape */
 @media only screen and (max-device-width: 300px) and (orientation: landscape) {
   html,
   body {
@@ -304,3 +305,13 @@ body {
     display: none;
   }
 }
+
+/* Devices large enough for landscape */
+@media only screen and (min-width: 300px) and (orientation: landscape) {
+  #controller {
+    bottom: 50%;
+    transform: translateY(50%);
+    opacity: 0.5;
+  }
+}
+
